# mr.data

./: .env.example  .gitignore  README.md  Readme.md  need_improve  need_improve.md  need_improve_tmp_dont_delete_change.md  pyproject.toml
data/personalities/: README.md  data.json
doc/: database-design.md
scripts/: code_struct.py  ingest_personality.py  init_db.py  run_offline.py
src/mr_data/: __init__.py  cli.py  config.py  embeddings.py  logging.py
src/mr_data/db/: __init__.py  chroma.py  personality_loader.py  pgembed_manager.py  postgres.py
src/mr_data/llm/: client.py
src/mr_data/models/: __init__.py  personality.py
src/mr_data/offline/: __init__.py  attribution.py
src/mr_data/online/: __init__.py  graph.py  page_extract.py  search_providers.py  web_search.py
tests/: conftest.py  test_e2e.py  test_embeddings.py  test_page_extract.py  test_personality_loader.py  test_user_identity.py  test_web_search.py
